force-app/main/default/objects/DevCore__Bisnode_Client__mdt/DevCore__Bisnode_Client__mdt.object-meta.xml
<CustomObject>
    <label>Bisnode Client</label>
    <pluralLabel>Bisnode Clients</pluralLabel>
</CustomObject>