force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Bisnode_Endpoint_Code_Types_Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Endpoint_Code_Types_Legal_Form__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/codetypes/JF&quot;</defaultValue>
    <label>Endpoint - Code Types - Legal Form</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>