force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Bisnode_Endpoint_Code_Types_Municipality__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Endpoint_Code_Types_Municipality__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/codetypes/GK&quot;</defaultValue>
    <label>Endpoint - Code Types - Municipality</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>