force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Bisnode_Endpoint_Company__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Endpoint_Company__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/companies/{companyId}&quot;</defaultValue>
    <label>Endpoint - Company</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>