force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Bisnode_Endpoint_Company_Changes__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Endpoint_Company_Changes__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/companies/changes&quot;</defaultValue>
    <label>Endpoint - Company - Changes</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>