force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Bisnode_Endpoint_Employment__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Endpoint_Employment__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/employments/{employmentId}&quot;</defaultValue>
    <label>Endpoint - Employment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>