force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Bisnode_Endpoint_Worksite__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Endpoint_Worksite__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/worksites/{worksiteId}&quot;</defaultValue>
    <label>Endpoint - Worksite</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>