force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Bisnode_Endpoint_Worksite_Select__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Endpoint_Worksite_Select__c</fullName>
    <defaultValue>&quot;https://api.bisnode.com/bbc/v2/select/worksites{params}&quot;</defaultValue>
    <label>Endpoint - Worksite - Select</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>