force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Company_Search_Records_per_Request__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Company_Search_Records_per_Request__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Max number of results to provide in each resultset (default: 10 - maximum: 10000)</description>
    <inlineHelpText>Max number of results to provide in each resultset (default: 10 - maximum: 10000)</inlineHelpText>
    <label>Company Search - Records per Request</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>