force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Endpoint_Code_Types_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Endpoint_Code_Types_Employee_Count__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/codetypes/AA&quot;</defaultValue>
    <label>Endpoint - Code Types - Employee Count</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>