force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Endpoint_Employment_Search__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Endpoint_Employment_Search__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/employments{params}&quot;</defaultValue>
    <label>Endpoint - Employment - Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>