force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Endpoint_Worksite_Search__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Endpoint_Worksite_Search__c</fullName>
    <defaultValue>&quot;https://bbc.bisnode.com/v2/worksites&quot;</defaultValue>
    <label>Endpoint - Worksite - Search</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>