force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>