force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__Is_Test__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>