force-app/main/default/objects/DevCore__Bisnode_Client__mdt/fields/DevCore__NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>DevCore__NamedCredential__c</fullName>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>